k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myapp.localdev.me
    secretName: prod-sample-app-tls
    # secretName: myapp-tls
  rules:
  - host: myapp.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-sample-app  # Adjust to your app's Service name
            port:
              number: 80
